--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,13 +71,17 @@ dependencies {
 
     def room_version = "2.5.1"
 
+    //noinspection GradleDependency
     implementation("androidx.room:room-runtime:$room_version")
     kapt "androidx.room:room-compiler:$room_version"
+    //noinspection GradleDependency
     implementation("androidx.room:room-ktx:$room_version")
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
 
     implementation 'com.razorpay:checkout:1.6.26'
+
+
 
 
 }
