Developed Profile Section & Adding Features Like Quantity,Address In AllOrders

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,13 @@ dependencies {
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
 
+    //Razorpay
     implementation 'com.razorpay:checkout:1.6.26'
+
+    //Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 
 
 
