--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.MalgangaDairy"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.NotificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MyOrdersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.HelpCenterActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.CheckoutActivity"
             android:exported="false" />
         <activity
@@ -42,10 +51,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-
     </application>
 
 </manifest>
